--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="./Level 1/33. 내적.js"></script>
+    <script src="./Level 1/37. 예산.js"></script>
 </body>
 
 </html>
